--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>บริการรถเช่า rentalcar</title>
     <link rel="stylesheet" href="home.css">
     <script src="home.js"></script>
 </head>
