--- a/home.html
+++ b/home.html
@@ -8,10 +8,28 @@
     <script src="home.js"></script>
 </head>
 <body>
-    <header class="header" id="header">
-        <nav class="nav container">
-            <a href="#" class="nav__logo">
-                Tapat Toungsakul
-            </a>
+    <nav>
+        <div class="container">
+            <div class="nav-con">
+                <div class="logo">
+                    <a href="#">Narbar</a>
+                </div>
+                <ul class="menu">
+                    <li><a href="#">menu#1</a></li>
+                    <li><a href="#">menu#2</a></li>
+                    <li><a href="#">menu#3</a></li>
+                    <li>
+                        <input type="text" class="nav-search-box" /><a href="">🔍</a>
+                    </li>
+                    <li>
+                        <div class="auth-box">
+                            <button class="nav-login-btn">LOGIN</button>
+                            <button class="nav-signup-btn">SIGNUP</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
