--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
                 </div>
                 <ul class="menu">
                     <li><a href="#">menu#1</a></li>
-                    <li><a href="#">menu#2</a></li>
+                    <li><a href="#RentalRules">วิธีการจองรถ</a></li>
                     <li><a href="#">menu#3</a></li>
                     <li>
                         <input type="text" class="nav-search-box" /><a href="">🔍</a>
@@ -31,5 +31,8 @@
             </div>
         </div>
     </nav>
+    <section class="RentalRules section" id="RentalRules">
+
+    </section>
 </body>
 </html>
