--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                     <a href="#">Narbar</a>
                 </div>
                 <ul class="menu">
-                    <li><a href="#">menu#1</a></li>
+                    <li><a href="#">เลือกรถ</a></li>
                     <li><a href="#RentalRules">วิธีการจองรถ</a></li>
                     <li><a href="#">menu#3</a></li>
                     <li>
@@ -23,8 +23,12 @@
                     </li>
                     <li>
                         <div class="auth-box">
-                            <button class="nav-login-btn">LOGIN</button>
-                            <button class="nav-signup-btn">SIGNUP</button>
+                            <button class="button LOGIN">
+                                <p class="text">LOGIN</p>
+                            </button>
+                            <button class="button SIGNUP">
+                                <p class="text">SIGNUP</p>
+                            </button>
                         </div>
                     </li>
                 </ul>
