--- a/home.html
+++ b/home.html
@@ -36,7 +36,9 @@
         </div>
     </nav>
     <section class="RentalRules section" id="RentalRules">
-
+        <div>
+            <h1>กติกาและขั้นตอนการเช่าบริการ</h1>
+        </div>
     </section>
 </body>
 </html>
