--- a/home.html
+++ b/home.html
@@ -37,7 +37,16 @@
     </nav>
     <section class="RentalRules section" id="RentalRules">
         <div>
-            <h1>กติกาและขั้นตอนการเช่าบริการ</h1>
+            <h1>กติกาการเช่าบริการ</h1>
+            <p>
+                1.  นับ 24 ขั่งโมง เป็น 1 วัน (รับรถเวลาไหนคืนเวลานั้น) หากคืนเกินเวลาที่ตกลง ทางร้านจะปัดเป็นรายขั่วโมง ชั่วโมงละ 50 - 100 ตามรุ่นรถ <br>
+                2.  กรณีเกิน 7 ชั่วโมง คิดเป็น 1 วัน<br>
+                3.  ครบกำหนดคืน และไม่มีคนเช่าต่อ ลูกค้าที่เช่าอยู่สามารถเช่าต่อได้ หากมีลูกค้าท่านอื่นเช่า ลูกค้าต้องคืนรถและเช่ารถคันอื่นแทน<br>
+                4.  หากมีใบสั่ง ใบค่าผ่านทาง ค่าปรับใดๆ ลูกค้าต้องเป็นผู้ชำระทุกกรณี<br>
+                5.  ลูกค้าต้องชำระค่าประกันอุบัติเหตุ 3000 บาทต่อคัน ณ วันรับรถ และจะได้รับคืน เมื่อตรวจรับรถแล้วไม่มีปัญหาใดๆ ในวันคืนรถ <br>
+                6.  หากลูกค้าทำรถสกปรกจนผิดวิสัย ทางร้านจะปรับค่าล้างทำความสะอาด 500-1500 บาท แล้วแต่กรณี<br>
+                7.  กรณีเช่าเพิ่มจากที่แจ้งไว้ ลูกค้าจะต้องโอนเงินค่าเช่าทันที โดยจะไม่มีการหักจากเงินประกันใดๆทั้งสิ้น<br>
+            </p>
         </div>
     </section>
 </body>
