--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <section class="RentalRules section" id="RentalRules">
-        <div>
+        <div class="Servicerentalrules">
             <h1>กติกาการเช่าบริการ</h1>
             <p class="servicerentalrules">
                 1.  นับ 24 ขั่งโมง เป็น 1 วัน (รับรถเวลาไหนคืนเวลานั้น) หากคืนเกินเวลาที่ตกลง ทางร้านจะปัดเป็นรายขั่วโมง ชั่วโมงละ 50 - 100 ตามรุ่นรถ <br>
@@ -48,17 +48,17 @@
                 7.  กรณีเช่าเพิ่มจากที่แจ้งไว้ ลูกค้าจะต้องโอนเงินค่าเช่าทันที โดยจะไม่มีการหักจากเงินประกันใดๆทั้งสิ้น<br>
             </p>
         </div>
-        <div>
+        <div class="Documentsusedforrentingservices">
             <h1>เอกสารที่ใช้เช่าบริการ</h1>
-            <p class="Documentsusedforrentingservices">
+            <p class="documentsusedforrentingservices">
                 1.  บัตรประชาชน, Passport รวมทั้งใบขับขี่รถยนต์<br>
                 2.  เอกสารแสดงที่อยู่อาศัยปัจจุบัน เช่น <br>-หน้าซองจดหมาย(อายุส่งไม่เกิน 2 เดือน) <br>-บิลค่าน้ำ, บิลค่าไฟ, บิลค่าโทรศัพท์ <br>-สัญญาเช่าบ้าน, สัญญาเช่าห้อง<br>
                 3.  เอกสารแสดงที่อยู่ที่ทำงาน เช่น <br>-สลิปเงินเดือน, เอกสารรับรองการทำงาน <br>-บัตรพนักงาน(ถ่ายรูปหน้าและหลัง) <br>-บิลขาย, สั่งซื้อสินค้า <br>-เอกสารการจ่ายภาษีปีล่าสุด <br>-สัญญาจ้างงาน, สัญญาเช่าร้าน <br>-บัตรนักศึกษา, ใบลงทะเบียนล่าสุด<br>
-                <p class="subDocumentsusedforrentingservices">
+                <p class="subdocumentsusedforrentingservices">
                     กรณีคนติดต่อเช่าไม่ใช่ผู้ขับขี่ ต้องใช้บัตรประชาชนผู้ติดต่อเช่าร่วมด้วย
-                    กรณีเป็นแม่บ้าน ใช้บัตรประชาชนผู้อยู่อาศัยร่วมเพิ่มอีก 1 คน
+                    <br>กรณีเป็นแม่บ้าน ใช้บัตรประชาชนผู้อยู่อาศัยร่วมเพิ่มอีก 1 คน
                 </p>
-                <p class="noteDocumentsusedforrentingservices">
+                <p class="notedocumentsusedforrentingservices">
                     หมายเหตุ : เอกสารที่ยื่นชื่อต้องตรงกับบัตรประชาชนโดยใช้เอกสารคู่กับญาติ แฟน หรือ เพื่อนได้ แล้วแต่กรณี โดยทางร้านจะพิจารณาตามหลักเกณฑ์ที่กำหนด
                 </p>
             </p>
