--- a/sub.html
+++ b/sub.html
@@ -43,7 +43,7 @@
     </nav>
     <section class="RentalRules section" id="RentalRules">
         <div class="Servicerentalrules">
-            <h1>กติกาการเช่าบริการ</h1>
+            <h3>กติกาการเช่าบริการ</h3>
             <p class="servicerentalrules">
                 1.  นับ 24 ขั่งโมง เป็น 1 วัน (รับรถเวลาไหนคืนเวลานั้น) หากคืนเกินเวลาที่ตกลง ทางร้านจะปัดเป็นรายขั่วโมง ชั่วโมงละ 50 - 100 ตามรุ่นรถ <br>
                 2.  กรณีเกิน 7 ชั่วโมง คิดเป็น 1 วัน<br>
@@ -57,11 +57,13 @@
     </section>
     <section class="Document section" id="Document">
         <div class="Documentsusedforrentingservices">
-            <h1>เอกสารที่ใช้เช่าบริการ</h1>
+            <h3>เอกสารที่ใช้เช่าบริการ</h3>
             <p class="documentsusedforrentingservices">
                 1.  บัตรประชาชน, Passport รวมทั้งใบขับขี่รถยนต์<br>
-                2.  เอกสารแสดงที่อยู่อาศัยปัจจุบัน เช่น <br>-หน้าซองจดหมาย(อายุส่งไม่เกิน 2 เดือน) <br>-บิลค่าน้ำ, บิลค่าไฟ, บิลค่าโทรศัพท์ <br>-สัญญาเช่าบ้าน, สัญญาเช่าห้อง<br>
-                3.  เอกสารแสดงที่อยู่ที่ทำงาน เช่น <br>-สลิปเงินเดือน, เอกสารรับรองการทำงาน <br>-บัตรพนักงาน(ถ่ายรูปหน้าและหลัง) <br>-บิลขาย, สั่งซื้อสินค้า <br>-เอกสารการจ่ายภาษีปีล่าสุด <br>-สัญญาจ้างงาน, สัญญาเช่าร้าน <br>-บัตรนักศึกษา, ใบลงทะเบียนล่าสุด<br>
+                2.  เอกสารแสดงที่อยู่อาศัยปัจจุบัน เช่น 
+                <p class="exampledocumentsusedforrentingservices">-หน้าซองจดหมาย(อายุส่งไม่เกิน 2 เดือน) <br>-บิลค่าน้ำ, บิลค่าไฟ, บิลค่าโทรศัพท์ <br>-สัญญาเช่าบ้าน, สัญญาเช่าห้อง<br></p>
+                3.  เอกสารแสดงที่อยู่ที่ทำงาน เช่น 
+                <p class="exampledocumentsusedforrentingservices">-สลิปเงินเดือน, เอกสารรับรองการทำงาน <br>-บัตรพนักงาน(ถ่ายรูปหน้าและหลัง) <br>-บิลขาย, สั่งซื้อสินค้า <br>-เอกสารการจ่ายภาษีปีล่าสุด <br>-สัญญาจ้างงาน, สัญญาเช่าร้าน <br>-บัตรนักศึกษา, ใบลงทะเบียนล่าสุด<br></p>
                 <p class="subdocumentsusedforrentingservices">
                     กรณีคนติดต่อเช่าไม่ใช่ผู้ขับขี่ ต้องใช้บัตรประชาชนผู้ติดต่อเช่าร่วมด้วย
                     <br>กรณีเป็นแม่บ้าน ใช้บัตรประชาชนผู้อยู่อาศัยร่วมเพิ่มอีก 1 คน
