--- a/sub.html
+++ b/sub.html
@@ -60,13 +60,25 @@
             <h3>เอกสารที่ใช้เช่าบริการ</h3>
             <p class="documentsusedforrentingservices">
                 1.  บัตรประชาชน, Passport รวมทั้งใบขับขี่รถยนต์<br>
-                2.  เอกสารแสดงที่อยู่อาศัยปัจจุบัน เช่น 
-                <p class="exampledocumentsusedforrentingservices">-หน้าซองจดหมาย(อายุส่งไม่เกิน 2 เดือน) <br>-บิลค่าน้ำ, บิลค่าไฟ, บิลค่าโทรศัพท์ <br>-สัญญาเช่าบ้าน, สัญญาเช่าห้อง<br></p>
-                3.  เอกสารแสดงที่อยู่ที่ทำงาน เช่น 
-                <p class="exampledocumentsusedforrentingservices">-สลิปเงินเดือน, เอกสารรับรองการทำงาน <br>-บัตรพนักงาน(ถ่ายรูปหน้าและหลัง) <br>-บิลขาย, สั่งซื้อสินค้า <br>-เอกสารการจ่ายภาษีปีล่าสุด <br>-สัญญาจ้างงาน, สัญญาเช่าร้าน <br>-บัตรนักศึกษา, ใบลงทะเบียนล่าสุด<br></p>
+                2.  เอกสารแสดงที่อยู่อาศัยปัจจุบัน เช่น
+                <p class="exampledocumentsusedforrentingservices">
+                    -หน้าซองจดหมาย(อายุส่งไม่เกิน 2 เดือน) <br>
+                    -บิลค่าน้ำ, บิลค่าไฟ, บิลค่าโทรศัพท์ <br>
+                    -สัญญาเช่าบ้าน, สัญญาเช่าห้อง<br>
+                </p>
+                3.  เอกสารแสดงที่อยู่ที่ทำงาน เช่น
+                <p class="exampledocumentsusedforrentingservices"><br>
+                    -สลิปเงินเดือน, เอกสารรับรองการทำงาน <br>
+                    -บัตรพนักงาน(ถ่ายรูปหน้าและหลัง) <br>
+                    -บิลขาย, สั่งซื้อสินค้า <br>
+                    -เอกสารการจ่ายภาษีปีล่าสุด <br>
+                    -สัญญาจ้างงาน, สัญญาเช่าร้าน <br>
+                    -บัตรนักศึกษา, ใบลงทะเบียนล่าสุด<br>
+                </p>
+                
                 <p class="subdocumentsusedforrentingservices">
-                    กรณีคนติดต่อเช่าไม่ใช่ผู้ขับขี่ ต้องใช้บัตรประชาชนผู้ติดต่อเช่าร่วมด้วย
-                    <br>กรณีเป็นแม่บ้าน ใช้บัตรประชาชนผู้อยู่อาศัยร่วมเพิ่มอีก 1 คน
+                    กรณีคนติดต่อเช่าไม่ใช่ผู้ขับขี่ ต้องใช้บัตรประชาชนผู้ติดต่อเช่าร่วมด้วย<br>
+                    กรณีเป็นแม่บ้าน ใช้บัตรประชาชนผู้อยู่อาศัยร่วมเพิ่มอีก 1 คน
                 </p>
                 <p class="notedocumentsusedforrentingservices">
                     หมายเหตุ : เอกสารที่ยื่นชื่อต้องตรงกับบัตรประชาชนโดยใช้เอกสารคู่กับญาติ แฟน หรือ เพื่อนได้ แล้วแต่กรณี โดยทางร้านจะพิจารณาตามหลักเกณฑ์ที่กำหนด
