--- a/sub.html
+++ b/sub.html
@@ -8,26 +8,20 @@
     <link rel="stylesheet" href="sub.css">
 </head>
 <body>
-  <!--==================== MAIN ====================-->
-  <main class="main">
-    <!--==================== HOME ====================-->
-    <section class="#Allcars section" id="#Allcars">
-      <div class="card">
-        <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
-        <div class="container">
-          <h4><b>John Doe</b></h4>
-          <p>Architect & Engineer</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
-        <div class="container">
-          <h4><b>John Doe</b></h4>
-          <p>Architect & Engineer</p>
-        </div>
-      </div>
-    </section>
-    <section class="RentalRules section" id="RentalRules">
+    <div class="scroller" data-speed="fast">
+        <ul class="tag-list scroller__inner">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+            <li>SSG</li>
+            <li>webdev</li>
+            <li>animation</li>
+            <li>UI/UX</li>
+        </ul>
+    </div>
+
+    
+    <ul class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
         <div class="Servicerentalrules">
             <h3>กติกาการเช่าบริการ</h3>
             <p class="servicerentalrules">
@@ -40,9 +34,6 @@
                 7.  กรณีเช่าเพิ่มจากที่แจ้งไว้ ลูกค้าจะต้องโอนเงินค่าเช่าทันที โดยจะไม่มีการหักจากเงินประกันใดๆทั้งสิ้น<br>
             </p>
         </div>
-    </section>
-
-    <section class="Document section" id="Document">
         <div class="Documentsusedforrentingservices">
             <h3>เอกสารที่ใช้เช่าบริการ</h3>
             <p class="documentsusedforrentingservices">
@@ -85,12 +76,17 @@
         </div>
         <button class="accordion">นำรถยนต์หรือจักรยานยนต์มาฝากกับทางร้านได้มั้ย</button>
         <div class="panel">
-            <p>ทางร้านรับฝากทั้งรถยนต์และจักรยานยนต์ แต่หากนำมาฝากต้องไม่ล็อกพวงมาลัยหรือล็อกคอจักรยานยนต์ และต้องนำกุญแจฝากไว้กับทางร้าน</p>
+            <p>ทางร้านรับฝากทั้งรถยนต์และจักรยานยนต์ หากนำมาฝากต้องไม่ล็อกพวงมาลัยหรือล็อกคอจักรยานยนต์ และนำกุญแจฝากไว้กับทางร้าน</p>
         </div>
     </section>
-  </main>
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-  <script src="sub.js"></script>
+
+
+
+
+    '
+    '
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <script src="sub.js"></script>
 
 
 
