--- a/sub.html
+++ b/sub.html
@@ -8,19 +8,9 @@
     <link rel="stylesheet" href="sub.css">
 </head>
 <body>
-    <div class="scroller" data-speed="fast">
-        <ul class="tag-list scroller__inner">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-            <li>SSG</li>
-            <li>webdev</li>
-            <li>animation</li>
-            <li>UI/UX</li>
-        </ul>
-    </div>
-
     
+
+
     <ul class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
         <div class="Servicerentalrules">
             <h3>กติกาการเช่าบริการ</h3>
@@ -65,7 +55,7 @@
     </section>
     
     <section class="Question section" id="Question">
-        <h2>คำถามที่พบบ่อย</h2>
+        <h2 class="Accordion">คำถามที่พบบ่อย</h2>
         <button class="accordion">มีบริการรับส่งถึงหน้าบ้านไหม</button>
         <div class="panel">
             <p>ทางร้านมีบริการรับส่งถึงบ้าน โดยจะคิดตามระยะทางจริงและค่าบริการเที่ยวละ 100 บาท</p>
