--- a/allcars.html
+++ b/allcars.html
@@ -160,7 +160,8 @@
                     </div>
                 </div>
             </div>
-        </div><div class="vehicle-card">
+        </div>
+        <div class="vehicle-card">
             <div class="details">      
             <div class="thumb-gallery">
             <img class="first" src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" />
@@ -210,7 +211,8 @@
                     </div>
                 </div>
             </div>
-        </div><div class="vehicle-card">
+        </div>
+        <div class="vehicle-card">
             <div class="details">      
             <div class="thumb-gallery">
             <img class="first" src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" />
