--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
                         <div class="car_body_img_container">
                             <a href="#" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="./img/ford_focus.png" alt="Ford Focus">
+                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
                                 </figure>
                             </a>
                         </div>
@@ -86,7 +86,7 @@
                         <div class="car_body_img_container">
                             <a href="#" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="./img/nissan_sentra.png" alt="Nissan Sentra">
+                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="Nissan Sentra">
                                 </figure>
                             </a>
                         </div>
@@ -139,7 +139,7 @@
                         <div class="car_body_img_container">
                             <a href="#" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="./img/kia_forte.png" alt="KIA Forte">
+                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="KIA Forte">
                                 </figure>
                             </a>
                         </div>
