--- a/signup.html
+++ b/signup.html
@@ -54,11 +54,11 @@
                                 <span title="Manual">Manual</span>
                             </li>
                             <li>
-                                <i class="fas fa-tachometer-alt"></i>
-                                <span title="Kilometraje ilimitado">Kilometraje ilimitado</span>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
                             </li>
                             <li>
-                                <i class="fas fa-user"></i>
+                                <i class="fa-solid fa-person"></i>
                                 <span title="5">5</span>
                             </li>
                         </ul>
