--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,8 @@
                     <div class="car_footer">
                         <ul class="car_list_characteristics">
                             <li>
-                                <i class="fas fa-sliders-h"></i>
+                                <i class="fa-solid fa-gears"></i>
+                                
                                 <span title="Manual">Manual</span>
                             </li>
                             <li>
@@ -58,7 +59,7 @@
                                 <span title="Kilometraje ilimitado">Gasohal 95</span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-person"></i>
+                                <i class="fas fa-user"></i>
                                 <span title="5">5</span>
                             </li>
                         </ul>
