--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="signup.css">
+    <script src="https://kit.fontawesome.com/signup.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
@@ -50,8 +51,7 @@
                     <div class="car_footer">
                         <ul class="car_list_characteristics">
                             <li>
-                                <i class="fa-solid fa-gears"></i>
-                                
+                                <i class="fas fa-sliders-h"></i>
                                 <span title="Manual">Manual</span>
                             </li>
                             <li>
