--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
     <main class="main">
@@ -39,20 +39,20 @@
                             </a>
                         </div>
                         <div>
-                            <p class="car_name">FORD</p>
+                            <p class="car_name">Toyota</p>
                             <div class="car_price_container">
                                 <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">FOCUS</h2>
+                                    <h2 class="car_model" title="FOCUS">Innova</h2>
                                 </a>
-                                <p class="car_price">$500.00 <span class="car_price_time">/hora</span></p>
+                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
                     <div class="car_footer">
                         <ul class="car_list_characteristics">
                             <li>
-                                <i class="fas fa-sliders-h"></i>
-                                <span title="Manual">Manual</span>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-gas-pump"></i>
@@ -60,7 +60,7 @@
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
-                                <span title="5">5</span>
+                                <span title="5">7</span>
                             </li>
                         </ul>
                     </div>
@@ -92,24 +92,24 @@
                             </a>
                         </div>
                         <div>
-                            <p class="car_name">NISSAN</p>
+                            <p class="car_name">Toyota</p>
                             <div class="car_price_container">
                                 <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="SENTRA">SENTRA</h2>
+                                    <h2 class="car_model" title="SENTRA">Altis</h2>
                                 </a>
-                                <p class="car_price">$420.00 <span class="car_price_time">/hora</span></p>
+                                <p class="car_price">850฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
                     <div class="car_footer">
                         <ul class="car_list_characteristics">
                             <li>
-                                <i class="fas fa-sliders-h"></i>
-                                <span title="Manual">Manual</span>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
                             </li>
                             <li>
-                                <i class="fas fa-tachometer-alt"></i>
-                                <span title="Kilometraje ilimitado">Kilometraje ilimitado</span>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
@@ -145,24 +145,24 @@
                             </a>
                         </div>
                         <div>
-                            <p class="car_name">KIA</p>
+                            <p class="car_name">Toyota</p>
                             <div class="car_price_container">
                                 <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="FORTE">FORTE</h2>
+                                    <h2 class="car_model" title="FORTE">Vios</h2>
                                 </a>
-                                <p class="car_price">$600.00 <span class="car_price_time">/hora</span></p>
+                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
                     <div class="car_footer">
                         <ul class="car_list_characteristics">
                             <li>
-                                <i class="fas fa-sliders-h"></i>
-                                <span title="Manual">Manual</span>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
                             </li>
                             <li>
-                                <i class="fas fa-tachometer-alt"></i>
-                                <span title="Kilometraje ilimitado">Kilometraje ilimitado</span>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
