--- a/signup.html
+++ b/signup.html
@@ -62,6 +62,11 @@
                                 <i class="fas fa-user"></i>
                                 <span title="5">7</span>
                             </li>
+                            <li>
+                                <button class="rentbtn">
+                                    <p class="text">Go to book</p>
+                                </button>
+                            </li>
                         </ul>
                     </div>
                 </article>
@@ -115,6 +120,11 @@
                                 <i class="fas fa-user"></i>
                                 <span title="5">5</span>
                             </li>
+                            <li>
+                                <button class="rentbtn">
+                                    <p class="text">Go to book</p>
+                                </button>
+                            </li>
                         </ul>
                     </div>
                 </article>
@@ -167,6 +177,11 @@
                             <li>
                                 <i class="fas fa-user"></i>
                                 <span title="5">5</span>
+                            </li>
+                            <li>
+                                <button class="rentbtn">
+                                    <a href="" class="text">Go to book</a>
+                                </button>
                             </li>
                         </ul>
                     </div>
