--- a/signup.html
+++ b/signup.html
@@ -3,318 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Signup</title>
     <link rel="stylesheet" href="signup.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
-    <main class="main">
-        <div class="container">
-            <section class="grid_cards">
-                <article class="card_ui">
-                    <div class="car_header">
-                        <div class="car_header_status">
-                            <a href="#" class="status_rating">
-                                <i class="fas fa-star status_rating_star"></i>
-                                <span>4.7</span>
-                                <span class="status_rating_number_comments">(109)</span>
-                            </a>
-                            <div class="status_disponibility status_available">
-                                <span>Disponible</span>
-                            </div>
-                        </div>
-                        <div>
-                            <button class="button_like">
-                                <i class="far fa-heart"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="car_body">
-                        <div class="car_body_img_container">
-                            <a href="#" class="car_img_content_link">
-                                <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
-                                </figure>
-                            </a>
-                        </div>
-                        <div>
-                            <p class="car_name">Toyota</p>
-                            <div class="car_price_container">
-                                <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">Innova</h2>
-                                </a>
-                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="car_footer">
-                        <ul class="car_list_characteristics">
-                            <li>
-                                <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">automatic</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Gasohal 95</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-user"></i>
-                                <span title="5">7</span>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <button class="rentbtn">
-                                        <p class="text">Go to book</p>
-                                    </button>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </article>
-                <article class="card_ui">
-                    <div class="car_header">
-                        <div class="car_header_status">
-                            <a href="#" class="status_rating">
-                                <i class="fas fa-star status_rating_star"></i>
-                                <span>4.7</span>
-                                <span class="status_rating_number_comments">(109)</span>
-                            </a>
-                            <div class="status_disponibility status_available">
-                                <span>Disponible</span>
-                            </div>
-                        </div>
-                        <div>
-                            <button class="button_like">
-                                <i class="far fa-heart"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="car_body">
-                        <div class="car_body_img_container">
-                            <a href="#" class="car_img_content_link">
-                                <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
-                                </figure>
-                            </a>
-                        </div>
-                        <div>
-                            <p class="car_name">Toyota</p>
-                            <div class="car_price_container">
-                                <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">Innova</h2>
-                                </a>
-                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="car_footer">
-                        <ul class="car_list_characteristics">
-                            <li>
-                                <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">automatic</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Gasohal 95</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-user"></i>
-                                <span title="5">7</span>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <button class="rentbtn">
-                                        <p class="text">Go to book</p>
-                                    </button>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </article>
-                <article class="card_ui">
-                    <div class="car_header">
-                        <div class="car_header_status">
-                            <a href="#" class="status_rating">
-                                <i class="fas fa-star status_rating_star"></i>
-                                <span>4.7</span>
-                                <span class="status_rating_number_comments">(109)</span>
-                            </a>
-                            <div class="status_disponibility status_available">
-                                <span>Disponible</span>
-                            </div>
-                        </div>
-                        <div>
-                            <button class="button_like">
-                                <i class="far fa-heart"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="car_body">
-                        <div class="car_body_img_container">
-                            <a href="#" class="car_img_content_link">
-                                <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
-                                </figure>
-                            </a>
-                        </div>
-                        <div>
-                            <p class="car_name">Toyota</p>
-                            <div class="car_price_container">
-                                <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">Innova</h2>
-                                </a>
-                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="car_footer">
-                        <ul class="car_list_characteristics">
-                            <li>
-                                <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">automatic</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Gasohal 95</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-user"></i>
-                                <span title="5">7</span>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <button class="rentbtn">
-                                        <p class="text">Go to book</p>
-                                    </button>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </article>
-                <article class="card_ui">
-                    <div class="car_header">
-                        <div class="car_header_status">
-                            <a href="#" class="status_rating">
-                                <i class="fas fa-star status_rating_star"></i>
-                                <span>4.6</span>
-                                <span class="status_rating_number_comments">(58)</span>
-                            </a>
-                            <div class="status_disponibility status_available">
-                                <span>Disponible</span>
-                            </div>
-                        </div>
-                        <div>
-                            <button class="button_like">
-                                <i class="far fa-heart"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="car_body">
-                        <div class="car_body_img_container">
-                            <a href="#" class="car_img_content_link">
-                                <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="Nissan Sentra">
-                                </figure>
-                            </a>
-                        </div>
-                        <div>
-                            <p class="car_name">Toyota</p>
-                            <div class="car_price_container">
-                                <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="SENTRA">Altis</h2>
-                                </a>
-                                <p class="car_price">850฿ <span class="car_price_time">/day</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="car_footer">
-                        <ul class="car_list_characteristics">
-                            <li>
-                                <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">automatic</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Gasohal 95</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-user"></i>
-                                <span title="5">5</span>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <button class="rentbtn">
-                                        <p class="text">Go to book</p>
-                                    </button>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </article>
-                <article class="card_ui">
-                    <div class="car_header">
-                        <div class="car_header_status">
-                            <a href="#" class="status_rating">
-                                <i class="fas fa-star status_rating_star"></i>
-                                <span>4.5</span>
-                                <span class="status_rating_number_comments">(77)</span>
-                            </a>
-                            <div class="status_disponibility status_not_available">
-                                <span>No disponible</span>
-                            </div>
-                        </div>
-                        <div>
-                            <button class="button_like">
-                                <i class="far fa-heart"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="car_body">
-                        <div class="car_body_img_container">
-                            <a href="#" class="car_img_content_link">
-                                <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="KIA Forte">
-                                </figure>
-                            </a>
-                        </div>
-                        <div>
-                            <p class="car_name">Toyota</p>
-                            <div class="car_price_container">
-                                <a href="#" class="car_model_link">
-                                    <h2 class="car_model" title="FORTE">Vios</h2>
-                                </a>
-                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="car_footer">
-                        <ul class="car_list_characteristics">
-                            <li>
-                                <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">automatic</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Gasohal 95</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-user"></i>
-                                <span title="5">5</span>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <button class="rentbtn">
-                                        <p class="text">Go to book</p>
-                                    </button>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </article>
-            </section>
-        </div>
-    </main>
-    <script src="./js/main.js"></script>
+    
 </body>
 </html>
