--- a/allcars.html
+++ b/allcars.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Allcars รถยนต์เช่าทั้งหมด</title>
     <link rel="stylesheet" href="allcars.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
@@ -315,5 +315,6 @@
             </section>
         </div>
     </main>
+    <script src="allcars.js"></script>
 </body>
 </html>
