--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <title>All Products - Redstore</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="home.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
         <!--added a cdn link by searching font awesome4 cdn and getting this link from https://www.bootstrapcdn.com/fontawesome/ this url*/-->
@@ -17,11 +17,11 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="index.html"><img src="images/logo.png" width="125px"></a>
+                    <a href="home.html"><img src="images/logo.png" width="125px"></a>
                 </div>
                <nav>
                     <ul id="MenuItems">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                          <li><a href="products.html">Products</a></li>
                          <li><a href="">About</a></li>
                          <li><a href="">Contact</a></li>
