--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="footer-col-2">
                     <img src="images/logo-white.png">
-                    <p>.</p>
+                    <p>Thank you for coming to use our service.</p>
                 </div>
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
