--- a/home.html
+++ b/home.html
@@ -82,9 +82,8 @@
                     <h3>Follow us</h3>
                     <ul>
                         <li>Facebook</li>
-                        <li>Twitter</li>
-                        <li>Instagram</li>
-                        <li>Youtube</li>
+                        <li>081-9424507 (คุณแก้ว)</li>
+                        <li>098-2625255 (คุณโต้)</li>
                     </ul>
                 </div>
                 
